# wsgirouter3

./: CHANGELOG.md  README.md  pyproject.toml  requirements_dev.txt  setup.py  tox.ini  wsgirouter3.py
.github/workflows/: python-package.yml
examples/authorization/: application.py
examples/simple/: application.py
tests/: conftest.py  test_pep_563.py  test_router.py  test_wsgi.py  test_wsgi_marshmallow.py  test_wsgi_orjson.py  test_wsgi_pydantic.py
